--- a/style.css
+++ b/style.css
@@ -12,23 +12,27 @@
   padding: 0;
   box-sizing: border-box;
 }
+html, body{
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
 html {
   font-family: 'Inter', sans-serif;
   font-size: 15px;
-  position: relative;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 body {
-  width: 90vw;
-  max-width: 1100px;
   min-height: 100vh;
-  margin: 0 auto;
   padding-top: 90px;
   background-color: var(--bg-and-text-color);
   color: var(--dark-color);
-  overflow-x: hidden;
+}
+.container{
+  width: 90vw;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 /* Header */
